[145834] Since deploy directory is configurable, add a system property that identifies the location.  It will be useful in catalina.policy file.